EFcoreApp projesine Kurs Syafası eklendi

--- a/EFcoreApp/Views/Ogrenci/Edit.cshtml
+++ b/EFcoreApp/Views/Ogrenci/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Öğrenci Güncelleme</h2>
 <hr>
-<form asp-controller="Ogrenci" asp-action="Create" method="post">
+<form asp-controller="Ogrenci" asp-action="Edit" method="post">
     <input type="hidden" asp-for="Ogrencild">
     <div class="mb-3">
         <label asp-for="OgrenciAd" class="form-label"> Öğrenci Adi</label>
