--- a/EFcoreApp/Views/Shared/_Layout.cshtml
+++ b/EFcoreApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ogrenci" asp-action="Create">Öğrenci Ekle</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kurs" asp-action="Create">Kurs Ekle</a>
+                        </li>
                     </ul>
                 </div>
             </div>
