Proje ilk versiyon tamamlandı

--- a/EFcoreApp/Views/Kurs/Index.cshtml
+++ b/EFcoreApp/Views/Kurs/Index.cshtml
@@ -9,6 +9,7 @@
         <tr>
             <th style="width: 150px;">@Html.DisplayNameFor(m => m.KursId)</th>
             <th>@Html.DisplayNameFor(m => m.Baslik)</th>
+            <th>@Html.DisplayNameFor(m => m.Ogretmen.AdSoyad)</th>
             <th style="width: 150px;"></th>
         </tr>
     </thead>
@@ -19,9 +20,10 @@
 
                 <td>@Html.DisplayFor(modelItem => item.KursId)</td>
                 <td>@Html.DisplayFor(modelItem => item.Baslik)</td>
+                <td>@Html.DisplayFor(modelItem => item.Ogretmen.AdSoyad)</td>
                 <td>
-                    <a class="btn btn-sm btn-primary"  asp-action="Edit" asp-route-id="item.KursId">Edit</a>
-                    <a class="btn btn-sm btn-danger"  asp-action="Delete" asp-route-id="item.KursId">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.KursId" class="btn btn-sm btn-primary">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@item.KursId" class="btn btn-sm btn-danger">Delete</a>
                 </td>
 
             </tr>
