--- a/EFcoreApp/Views/Kurs/Edit.cshtml
+++ b/EFcoreApp/Views/Kurs/Edit.cshtml
@@ -1,12 +1,34 @@
-﻿@model Kurs
+﻿@model KursViewModel
 
 <h2>Kurs Güncelleme</h2>
 <hr>
-<form asp-controller="Kurs" asp-action="Edit" method="post">
-    <input type="hidden" asp-for="KursId">
-    <div class="mb-3">
-        <label asp-for="Baslik" class="form-label"> Kurs Adı</label>
-        <input asp-for="Baslik" class="form-control">
-    </div>    
-    <button type="submit" class="btn btn-secondary"> Kaydet</button>
-</form>
+<div class="row">
+    <div class="col-8">
+        <form asp-controller="Kurs" asp-action="Edit" method="post">
+            <div asp-validation-summary="All"></div>
+            <input type="hidden" asp-for="KursId">            
+            <div class="mb-3">
+                <label asp-for="Baslik" class="form-label"> Kurs Adı</label>
+                <input asp-for="Baslik" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label asp-for="OgretmenId" class="form-label"> Öğretmen Adi</label>
+                <select asp-for="OgretmenId" asp-items="ViewBag.Ogretmenler" class="form-select">
+                    <option value="">Seçiniz</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-secondary"> Kaydet</button>
+        </form>
+    </div>
+    <div class="col-4">
+        <h4>Öğrenciler</h4>
+        <hr>
+        <ul>
+            @foreach (var item in @Model.KursKayitlari)
+            {
+                <li>@item.Ogrenci.AdSoyad</li>
+            }
+
+        </ul>
+    </div>
+</div>
