--- a/EFcoreApp/Views/Shared/_Layout.cshtml
+++ b/EFcoreApp/Views/Shared/_Layout.cshtml
@@ -23,10 +23,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ogrenci" asp-action="Create">Öğrenci Ekle</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ogrenci" asp-action="Index">Öğrenciler</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Kurs" asp-action="Create">Kurs Ekle</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ogretmen" asp-action="Index">Öğretmenler</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kurs" asp-action="Index">Kurslar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="KursKayit" asp-action="Index">Kurs Kayıtları</a>
                         </li>
                     </ul>
                 </div>
