--- a/BlogApp/Views/_ViewImports.cshtml
+++ b/BlogApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BlogApp
 @using BlogApp.Entity
 @using BlogApp.Models
+@addTagHelper *, BlogApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
