--- a/BlogApp/Views/Shared/Components/NewPosts/Default.cshtml
+++ b/BlogApp/Views/Shared/Components/NewPosts/Default.cshtml
@@ -8,7 +8,7 @@
         @foreach(var post in Model)
         {
             <div class="mb-3">
-                <h6 class="mb-0"><a href="">@post.Title</a></h6>
+                <h6 class="mb-0"><a href="/posts/details/@post.Url">@post.Title</a></h6>
             </div>
         }
     </div>
