--- a/BlogApp/wwwroot/css/site.css
+++ b/BlogApp/wwwroot/css/site.css
@@ -18,5 +18,15 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #eff2f6;
+}
+
+a {
+    text-decoration: none;
+}
+
+.avatar {
+    width: 3rem;
+    height: 3rem;
 }
