--- a/BlogApp/Views/Posts/Details.cshtml
+++ b/BlogApp/Views/Posts/Details.cshtml
@@ -35,24 +35,27 @@
                             </div>
                         }
                     </div>
-                    <hr class="my-4">
-                    <div>
-                        <h4 class="mb-3">Yorum Ekle</h4>
-                        <form action="/posts/AddComment" method="post">
-                            <input type="hidden" id="PostId" name="PostId" value="@Model.PostId">
-                            <div class="mb-3">
-                                <label for="UserName" class="form-label">UserName</label>
-                                <input type="text" name="UserName" id="UserName" class="form-control">
-                            </div>
-                            <div class="mb-3">
-                                <label for="Text" class="form-label">Yorum</label>
-                                <textarea type="text" name="Text" id="Text" rows="3" class="form-control"></textarea>
-                            </div>
-                            <div class="mb-3">
-                                <button id="btnYorumKayit" type="submit" class="btn btn-primary">Kaydet</button>
-                            </div>
-                        </form>
-                    </div>
+                    @if (User.Identity!.IsAuthenticated)
+                    {
+                        <hr class="my-4">
+                        <div>
+                            <h4 class="mb-3">Yorum Ekle</h4>
+                            <form action="/posts/AddComment" method="post">
+                                <input type="hidden" id="PostId" name="PostId" value="@Model.PostId">
+                                <div class="mb-3">
+                                    <label for="Text" class="form-label">Yorum</label>
+                                    <textarea type="text" name="Text" id="Text" rows="3" class="form-control"></textarea>
+                                </div>
+                                <div class="mb-3">
+                                    <button id="btnYorumKayit" type="submit" class="btn btn-primary">Kaydet</button>
+                                </div>
+                            </form>
+                        </div>
+                    }
+                    else
+                    {
+                        <p>Yorum için uygulamaya giriş yapmalısınız. <a href="/users/login">Login</a></p>
+                    }
                 </div>
             </div>
         </div>
@@ -81,25 +84,26 @@
                         Text: $('#Text').val(),
                     },
                     success: function (yorum) {
-                        var date = new Date(yorum.publishedOn);
+                        console.log(yorum);
+                        var date = new Date(yorum.publishedOn);//filtrelendi
 
                         $("#comments").append(`
-                                    <div class="my-4 d-flex">
-                                        <img src="/img/${yorum.image}" alt="" class="avatar rounded-circle float-start me-3">
-                                        <div>
-                                            <div class="mb-2 d-flex">
-                                                <h6 class="me-2">${yorum.userName}</h6>
-                                                <small>${date.toLocaleDateString()}</small>
-                                            </div>
-                                            <p>${yorum.text}</p>
-                                        </div>
+                            <div class="my-4 d-flex">
+                                <img src="/img/${yorum.avatar}" alt="" class="avatar rounded-circle float-start me-3">
+                                <div>
+                                    <div class="mb-2 d-flex">
+                                        <h6 class="me-2">${yorum.username}</h6>
+                                        <small>${date.toLocaleDateString()}</small>
                                     </div>
-                                `);
+                                    <p>${yorum.text}</p>
+                                </div>
+                            </div>
+                        `);
 
                         $("#UserName").val('');
                         $("#Text").val('');
 
-                        var adet = parseInt($("#commentCount").text());
+                        var adet = parseInt($("#commentCount").text());//yorum adeti güncelleme
                         $("#commentCount").text(adet + 1);
                     }
                 });
