--- a/BlogApp/Views/_ViewImports.cshtml
+++ b/BlogApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BlogApp
 @using BlogApp.Entity
 @using BlogApp.Models
+@using System.Security.Claims;
 @addTagHelper *, BlogApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
