--- a/IdentityApp/Views/Users/Create.cshtml
+++ b/IdentityApp/Views/Users/Create.cshtml
@@ -6,6 +6,11 @@
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="mb-3">
+        <label asp-for="UserName"></label>
+        <input asp-for="UserName" class="form-control">
+    </div>
+
+    <div class="mb-3">
         <label asp-for="FullName"></label>
         <input asp-for="FullName" class="form-control">
     </div>
