--- a/IdentityApp/Views/Users/Edit.cshtml
+++ b/IdentityApp/Views/Users/Edit.cshtml
@@ -28,5 +28,27 @@
             </div>
         </div>
     </div>
+
+    <div class="card">
+        <div class="card-header">
+            Roller
+        </div>
+        <div class="card-body">
+
+            @foreach (var role in ViewBag.Roles)
+            {
+                <div class="form-check">
+                    <input type="checkbox"
+                           class="form-check-input"
+                           name="SelectedRoles"
+                           value="@role"
+                           id="@role"
+                    @(Model.SelectedRoles != null && Model.SelectedRoles.Any(i => i == role) ? "checked" : "")>
+                    <label for="@role" class="form-check-label">@role</label>
+                </div>
+            }
+
+        </div>
+    </div>
     <button type="submit" class="btn btn-primary">Kaydet</button>
 </form>
