Completed password reset and email confirm

--- a/IdentityApp/Views/Roles/Edit.cshtml
+++ b/IdentityApp/Views/Roles/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Edit Role</h2>
 <hr>
-<form asp-action="Edit" method="post">
+<form asp-controller="Roles" asp-action="Edit" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <input name="Id" type="hidden" value="@Model.Id">
     <div class="mb-3">
