--- a/StoreApp/StoreApp.Web/Views/_ViewImports.cshtml
+++ b/StoreApp/StoreApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using StoreApp.Web
 @using StoreApp.Web.Models
+@using StoreApp.Web.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, StoreApp.Web
