--- a/StoreApp/StoreApp.Web/Pages/Shared/_CardLayout.cshtml
+++ b/StoreApp/StoreApp.Web/Pages/Shared/_CardLayout.cshtml
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="~/StoreApp.Web.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <partial name="_Navbar" />
-
+    <div class="bg-secondary text-white p-3">
+        <div class="container">
+            <span class="navbar-brand">Store App</span>
+        </div>
+    </div>
     <div class="container my-3">
         @RenderBody()
     </div>
